<resources>
    <string name="highlight_stabilo">Highlight</string>
    <string name="menuDonasi">Donation</string>
    <string name="menuSupport">Support</string>
    <string name="mengimpor_titiktiga">Restoring…</string>
    <string name="mengekspor_titiktiga">Creating backup…</string>
    <string name="bagikan_renungan">Share devotion</string>
    <string name="renungan_sudah_disalin">Devotion has been copied.</string>
    <string name="salin_renungan">Copy devotion</string>
    <string name="ekspor_berhasil_file_yang_dihasilkan_file">Backup was successful.\n\nResults are in file: %s</string>
    <string name="impor_berhasil_angka_diproses">Restore was successful. In total %1$d bookmarks, notes, and/or highlights, and also %2$d labels were processed.</string>
    <string name="terjadi_kesalahan_ketika_mengekspor_pesan">There were error(s) when creating backup: %s</string>
    <string name="ekspor_pembatas_buku_dan_catatan_tanya">Create backup of bookmarks, notes, and highlights to SD Card or USB Storage? Existing backups will be overwritten.</string>
    <string name="terjadi_kesalahan_ketika_mengimpor_pesan">There were error(s) when restoring: %s</string>
    <string name="apakah_anda_mau_menumpuk_pembatas_buku_dan_catatan_tanya">Overwrite the bookmarks, notes, and highlights you currently have?</string>
    <string name="file_tidak_bisa_dibaca_file">The file does not exist or could not be read: %s</string>
    <string name="impor_dari_sd_card">Restore</string>
    <string name="ekspor_ke_sd_card">Backup</string>
    <string name="menuBantuan">Help</string>
    <string name="beri_saran_title">Suggest</string>
    <string name="versi">Version</string>
    <string name="menuDevotion">Devotion</string>
    <string name="search">Search</string>
    <string name="activity_title_markers">Markers</string>
    <string name="menu_markers">Markers</string>
    <string name="hapus_pembatas_buku">Delete bookmark</string>
    <string name="menuShare">Share</string>
    <string name="tulis_catatan">Write note</string>
    <string name="tambah_pembatas_buku">Add bookmark</string>
    <string name="salin_ayat">Copy verse</string>
    <string name="perj_baru">New Test.</string>
    <string name="perj_lama">Old Test.</string>
    <string name="search_bookname_only">%s only</string>
    <string name="ayat_sebelumangka">Verse</string>
    <string name="pasal_sebelumangka">Chapter</string>
    <string name="jump_to_prompt"><b>JUMP TO</b> — Example: ^1</string>
    <string name="belum_ada_pembatas_buku">No bookmarks yet.\nSelect a verse to add a bookmark.</string>
    <string name="judul_titikdua">TITLE</string>
    <string name="gagal_mengunduh_namaumum_tgl_tgl">Failed to download %1$s dated %2$s</string>
    <string name="kesalahan_dalam_mengunduh_namaumum_tgl_tgl_output">Error in downloading %1$s dated %2$s: %3$s</string>
    <string name="berhasil_mengunduh_namaumum_tgl_tgl">Succeeded in downloading %1$s dated %2$s</string>
    <string name="mengunduh_namaumum_tgl_tgl">Downloading %1$s dated %2$s…</string>
    <string name="belum_tersedia_mungkin_tanggal_yang_diminta_belum_disiapkan">Not yet available. Probably the requested date\'s material is not prepared yet, or there are some errors in recognizing the data source. Please try again later.</string>
    <string name="belum_tersedia_menunggu_pengambilan_data_lewat_internet_pastikan_ada">Not yet available. Fetching from the Internet…\n\n(Ensure there is Internet connection to fetch the devotion materials.)</string>
    <string name="hari_sabtu">Sat</string>
    <string name="hari_jumat">Fri</string>
    <string name="hari_kamis">Thu</string>
    <string name="hari_rabu">Wed</string>
    <string name="hari_selasa">Tue</string>
    <string name="hari_senin">Mon</string>
    <string name="hari_minggu">Sun</string>
    <string name="size_hasil">%d results</string>
    <string name="search_searching_tokens">Searching for verses containing %s…</string>
    <string name="pilih_setidaknya_satu_kitab">Choose at least one book to search.</string>
    <string name="pengunduhan_dibatalkan">Download canceled.</string>
    <string name="sedang_mendekompres_harap_tunggu">Decompressing. Please wait…</string>
    <string name="terunduh_sampe_byte">Downloaded: %d bytes</string>
    <string name="gagal_mengunduh_edisi_judul_ex_pastikan_internet">Failed in downloading version: %1$s (%2$s).\nMake sure that Internet is working correctly.</string>
    <string name="version_download_complete">Downloaded <b>^1</b></string>
    <string name="mulai_mengunduh">Starting download…</string>
    <string name="mengunduh_nama">Downloading %s</string>
    <string name="tuju_v">Go to</string>
    <string name="bagikan_alamat">Share %s</string>
    <string name="alamat_sudah_disalin">%s has been copied.</string>
    <string name="alamat_tidak_sah_alamat">Invalid address: %s</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="anda_yakin_mau_menghapus_catatan_ini">Delete this note?</string>
    <string name="hapus_catatan">Delete note</string>
    <string name="catatan_alamat">Note on %s</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="tidak_bisa_membuat_folder">Could not create folder %s</string>
    <string name="menuPengaturan">Settings</string>
    <string name="pilihKitab_s">Choose a Book</string>
    <string name="menuTentang">About</string>
    <string name="pengaturan_alkitab">Bible Settings</string>
    <string name="kelola_versi">Manage Versions</string>
    <string name="tambah">Add</string>
    <string name="versi_lainnya">Other versions…</string>
    <string name="ada_kegagalan_membuka_edisiid">Error opening %s</string>
    <string name="pdb_file_options">PDB file options</string>
    <string name="greek_charset">Greek charset</string>
    <string name="hebrew_charset">Hebrew charset</string>
    <string name="pdb_encoding">PDB encoding</string>
    <string name="sample_text">Sample text</string>
    <string name="include_book_and_chapter_headers">Include book and chapter headers</string>
    <string name="cp_opening_pdb_file">Opening PDB file</string>
    <string name="cp_loading_version_info">Loading version info</string>
    <string name="cp_loading_word_index">Loading word index</string>
    <string name="cp_analyzing_available_books">Analyzing available books</string>
    <string name="cp_mapping_books">Mapping books</string>
    <string name="cp_constructing_book_info">Constructing book info</string>
    <string name="cp_constructing_version_info">Constructing version info</string>
    <string name="cp_writing_num_section_pericope_titles">Writing %s section/pericope titles</string>
    <string name="cp_writing_translated_file">Writing translated file</string>
    <string name="cp_reading_book_info">Reading book info: %s</string>
    <string name="cp_writing_text_of_book_chapters">Writing text of book %1$s (%2$s chapters)</string>
    <string name="ed_type_built_in">Type: Built-in</string>
    <string name="ed_type_preset">Type: Downloadable</string>
    <string name="ed_type_add_on">Type: Added</string>
    <string name="ed_shortName_shortName">Short name: %s</string>
    <string name="ed_title_title">Title: %s</string>
    <string name="ed_stored_in_file">Stored in: %s</string>
    <string name="ed_default_filename_file">Preset name: %s</string>
    <string name="ed_download_url_url">Download URL: %s</string>
    <string name="ed_pdb_file_name_original_file">PDB file name (original): %s</string>
    <string name="ed_version_info_info">Version info: %s</string>
    <string name="ed_version_details">Version details</string>
    <string name="ed_choose_pdb_or_yes_file">Choose a .pdb or .yes file</string>
    <string name="ed_no_external_storage">No SD Card or USB storage found.</string>
    <string name="ed_invalid_file_selected">Invalid file selected.</string>
    <string name="ed_file_file_sudah_ada_dalam_daftar_versi">File %s is already on the list.</string>
    <string name="ed_error_encountered">Error encountered</string>
    <string name="ed_this_file_is_already_on_the_list">This file is already on the list.</string>
    <string name="ed_reading_pdb_file">Reading PDB file…</string>
    <string name="ed_finished">Finished.</string>
    <string name="ed_the_following_books_from_the_pdb_file_are_not_recognized">The following books from the PDB file are not recognized and therefore skipped. Please email yukuku@gmail.com if you think these should not have been skipped.</string>
    <string name="ed_error_reading_pdb_file">Error reading PDB file</string>
    <string name="ed_details">Details: </string>
    <string name="ed_buka_file_pdb_yes_lainnya">Open a .pdb/.yes file…</string>
    <string name="info_terperinci">Details</string>
    <string name="buang_dari_daftar">Remove from list</string>
    <string name="edit_bookmark">Edit bookmark</string>
    <string name="hapus_stabilo">Remove highlight</string>
    <string name="edit_note">Edit note</string>
    <string name="edit_highlight">Change highlight color</string>
    <string name="menuSort">Sort</string>
    <string name="menuSortCreateTime">Created date</string>
    <string name="menuSortModifyTime">Edited date</string>
    <string name="menuSortAri">Verse address</string>
    <string name="menuSortCaption">Title</string>
    <string name="menuSortCaption_color">Highlight color</string>
    <string name="create_edited_modified_time">%1$s\n(edited %2$s)</string>
    <string name="the_file_for_this_version_is_no_longer_available_file">The file for this version is no longer available. Remove this version from the list?\nFile: %s</string>
    <string name="create_label_title">Create label</string>
    <string name="do_you_want_to_remove_the_label_label_from_this_bookmark">"Remove the label '%s' from this bookmark?"</string>
    <string name="add_label_title">Add label</string>
    <string name="create_label_titik3">Create label…</string>
    <string name="select_books_to_search">Select books to search</string>
    <string name="rename_label_title">Rename label</string>
    <string name="bl_send_backup">Transfer</string>
    <string name="labels_titikdua">LABELS</string>
    <string name="tambah_titiktiga">Add…</string>
    <string name="redownload">Redownload</string>
    <string name="menuDisplay">Display</string>
    <string name="devotion_change_date">Change date</string>
	<string name="menuFullScreen">Full screen</string>
    <string name="me_export_menu_item">Export</string>
    <string name="dr_reminder">Reminder</string>
    <string name="rp_menuReadingPlan">Reading plan</string>
    <string name="rp_navigationPreviousDay">Previous day</string>
    <string name="rp_navigationGoToDate">Go to date</string>
    <string name="rp_navigationNextDay">Next day</string>
    <string name="rp_menuDownload">Download</string>
    <string name="menuNightMode">Night mode</string>
	<string name="menuSplitVersion">Split</string>
	<string name="menuBible">Bible</string>
	<string name="book_filter_old_testament">Old Testament</string>
	<string name="book_filter_old_pentateuch">Pentateuch</string>
	<string name="book_filter_old_history">History</string>
	<string name="book_filter_old_wisdom">Wisdom</string>
	<string name="book_filter_old_major_prophets">Major Prophets</string>
	<string name="book_filter_old_minor_prophets">Minor Prophets</string>
	<string name="book_filter_new_testament">New Testament</string>
	<string name="book_filter_new_gospels">Gospels</string>
	<string name="book_filter_new_acts">Apostolic History</string>
	<string name="book_filter_new_pauline_epistles">Pauline Epistles</string>
	<string name="book_filter_new_general_epistles">General Epistles</string>
	<string name="book_filter_new_apocalypse">Apocalypse</string>
</resources>