<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuSettings"
        android:icon="@drawable/ic_menu_settings"
        android:showAsAction="never"
        android:title="@string/menuPengaturan"/>
    <item
        android:id="@+id/menuDonation"
        android:icon="@drawable/ic_menu_donation"
        android:showAsAction="never"
        android:title="@string/menuDonasi"/>
    <item
        android:id="@+id/menuHelp"
        android:showAsAction="never"
        android:title="@string/menuBantuan"/>
    <item
        android:id="@+id/menuSendMessage"
        android:showAsAction="never"
        android:title="@string/beri_saran_title"/>
    <item
        android:id="@+id/menuAbout"
        android:showAsAction="never"
        android:title="@string/menuTentang"/>

</menu>