<?xml version="1.0" encoding="utf-8"?>
<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:title="@string/devotion_change_date"
		android:id="@+id/menuChangeDate"
		android:icon="@drawable/ic_menu_change_date" 
		app:showAsAction="ifRoom" />
	<item
		android:title="@string/salin_renungan"
		android:id="@+id/menuCopy"
		android:icon="@drawable/ic_menu_copy" 
		app:showAsAction="never" />
	<item
		android:title="@string/bagikan" 
		android:id="@+id/menuShare"
		android:icon="@drawable/ic_menu_share" 
		app:showAsAction="never" />
	<item
		android:title="@string/redownload" 
		android:id="@+id/menuRedownload"
		android:icon="@drawable/ic_menu_download" 
		app:showAsAction="never" />
    <item
        android:title="@string/dr_reminder"
        android:id="@+id/menuReminder"
        app:showAsAction="never" />
</menu>
