<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuCopy"
        android:icon="@drawable/ic_menu_copy"
        android:showAsAction="always"
        android:title="@string/salin_ayat"/>
    <item
        android:id="@+id/menuShare"
        android:icon="@drawable/ic_menu_share"
        android:showAsAction="always"
        android:title="@string/bagikan"/>
    <item
        android:id="@+id/menuAddSomething"
        android:icon="@drawable/ic_menu_add"
        android:showAsAction="always"
        android:title="Add…">
        <menu>
            <item
                android:id="@+id/menuAddBookmark"
                android:icon="@drawable/ic_menu_bookmark"
                android:showAsAction="always"
                android:title="@string/tambah_pembatas_buku"/>
            <item
                android:id="@+id/menuAddNote"
                android:icon="@drawable/attribute_type_note"
                android:showAsAction="always"
                android:title="@string/tulis_catatan"/>
            <item
                android:id="@+id/menuAddHighlight"
                android:icon="@drawable/highlight_color_cross"
                android:showAsAction="always"
                android:title="@string/highlight_stabilo"/>
        </menu>
    </item>
    <item
        android:id="@+id/menuEsvsb"
        android:icon="@android:drawable/ic_menu_call"
        android:showAsAction="ifRoom"
        android:title="ESV Study Bible"
        android:visible="false"/>

</menu>