<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:showDividers="middle"
	android:divider="@android:drawable/divider_horizontal_dark"
	android:dividerPadding="2dp"
	android:background="#2c2c2c">

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="user@domain.com"
		android:id="@+id/bUser"
		android:drawableLeft="@android:drawable/ic_menu_myplaces"
		android:drawablePadding="8dp"
		style="?android:spinnerStyle"/>

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/menuBible"
		android:id="@+id/bBible"
		android:drawableLeft="@drawable/ic_drawer_bible"
		android:drawablePadding="8dp"
		style="?android:buttonBarButtonStyle"
		android:gravity="left|center_vertical"/>

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/menuDevotion"
		android:drawableLeft="@drawable/ic_drawer_devotion"
		android:drawablePadding="8dp"
		android:id="@+id/bDevotion"
		style="?android:buttonBarButtonStyle"
		android:gravity="left|center_vertical"/>

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/rp_menuReadingPlan"
		android:id="@+id/bReadingPlan"
		android:drawableLeft="@drawable/ic_drawer_reading_plan"
		android:drawablePadding="8dp"
		style="?android:buttonBarButtonStyle"
		android:gravity="left|center_vertical"/>
</LinearLayout>